2006-02-02  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (man_MANS): Initialize.
	* Makefile.gen.sh (echo_LDFLAGS): Simplify.
	(man_MANS): Generate rules for building man pages from .xml.
	* acinclude.m4: Check for <<xmlto>>.

2006-02-01  Andrew Cagney  <cagney@redhat.com>

	* Makefile.gen.sh: Add glade, images, desktop, icons, property,
	and sampe files to EXTRA_DIST.

2006-01-30  Andrew Cagney  <cagney@redhat.com>

	* acinclude.m4 (PKG_CONFIG_PATH): Delete /opt/frysk/${lib}.

	* TestRunner.javain (get): Add -c|--console option.  When
	specified, add a console logger set to log at specified level.
	
	* Makefile.rules (distclean-cvsignored): Fix typo, $@.log, not
	$*.log.

	* TestRunner.javain: Import frysk.EventLogger.

	* Makefile.gen.sh (noinst_PROGRAMS): Add TestRunner so that it is
	always built.

	* TestRunner.javain: Fix typo, Optioni -> Option.
	
	* TestRunner.javain: Implement options using jargs, new option
	names are --level and --repeat.

2006-01-28  Andrew Cagney  <cagney@redhat.com>

	* acinclude.m4: General cleanup.
	(JAVAC, JAVA): Always set to GCJ, and JAVA.
	(ECJ_JAVA, ECJ, HAVE_ECJ): Define.
	* Makefile.gen.sh: Delete code generating rules for
	$(GEN_CLASSDIR)/files, ${GEN_DIRNAME}.jar.
	* Makefile.rules (JAVAC, JAVACFLAGS): Delete.
	(files.list, ${GEN_DIRNAME}.jar, ecj/checked): Moved to here from
	Makefile.gen.sh.
	(all-local): Add ecj/checked, when HAVE_ECJ.

2006-01-27  Andrew Cagney  <cagney@redhat.com>

	* Makefile.gen.sh (EXTRA_DIST): Remove common/JUnitTests.javain.

	* Makefile.rules (EXTRA_DIST): Delete *.javain.
	* Makefile.gen.sh (GEN_MAKENAME): Define, replace <<_dir>>.
	(GEN_NODIST, GEN_SOURCES): Replace with <<sources>> and
	<<nodist_sources>>.
	(BUILT_SOURCES): Add <<nodist_sources>>.

	* Makefile.gen.sh: Mark the generated Built.java, JUnitTests.java,
	and TestRunner.java as NODIST.

	* Makefile.rules (EXTRA_DIST): Add *.javain.

2006-01-26  Andrew Cagney  <cagney@redhat.com>
