@@ -1,6 +1,6 @@
 # This file is part of the program FRYSK.
 #
-# Copyright 2005, Red Hat Inc.
+# Copyright 2005, 2006, Red Hat Inc.
 #
 # FRYSK is free software; you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by
@@ -46,6 +46,8 @@ noinst_PROGRAMS =
 bin_PROGRAMS =
 sbin_PROGRAMS =
 libexec_PROGRAMS =
+pkglibexec_PROGRAMS =
+pkglibexecdir = $(libexecdir)/@PACKAGE@
 noinst_LIBRARIES =
 man_MANS =
 LDADD = 
@@ -171,14 +173,7 @@ SUFFIXES += .shjava
 # the directory corresponding to current sub-directory (frysk-gui,
 # frysk-core, ...).
 
-SUBST = \
-	mkdir -p `dirname $@` ; \
-	rm -f $@.tmp ; \
-	touch $@.tmp ; \
-	echo ''						>> $@.tmp ; \
-	echo '// Generated from: $<'			>> $@.tmp ; \
-	echo ''						>> $@.tmp ; \
-	sed < $<					>> $@.tmp \
+SUBST_SED = sed \
 		-e 's,[@]prefix[@],@prefix@,g' \
 		-e 's,[@]bindir[@],@bindir@,g' \
 		-e 's,[@]libdir[@],@libdir@,g' \
@@ -193,8 +188,18 @@ SUBST = \
 		-e 's,[@]pkgdatadir[@],$(pkgdatadir),g' \
 		-e 's,[@]pkglibdir[@],$(pkglibdir),g' \
 		-e 's,[@]pkgincludedir[@],$(pkgincludedir),g' \
+		-e 's,[@]pkglibexecdir[@],$(pkglibexecdir),g' \
 		-e 's,[@]GEN_PACKAGENAME[@],$(GEN_PACKAGENAME),g' \
-		-e 's,[@]VERSION[@],$(VERSION),g' ; \
+		-e 's,[@]VERSION[@],$(VERSION),g'
+
+SUBST = \
+	mkdir -p `dirname $@` ; \
+	rm -f $@.tmp ; \
+	touch $@.tmp ; \
+	echo ''						>> $@.tmp ; \
+	echo '// Generated from: $<'			>> $@.tmp ; \
+	echo ''						>> $@.tmp ; \
+	$(SUBST_SED) < $< 				>> $@.tmp ; \
 	chmod a-w $@.tmp ; \
 	mv -f $@.tmp $@
 
@@ -210,10 +215,13 @@ $(GEN_SOURCENAME)/JUnitTests.java: Makefile
 	rm -f $@.tmp
 	touch $@.tmp
 	echo 'package $(GEN_PACKAGENAME);'			>> $@.tmp
+	echo 'import java.util.LinkedList;'			>> $@.tmp
+	echo '/** JUnit tests for $(GEN_DIR) directory.  */'	>> $@.tmp
 	echo 'public class JUnitTests'				>> $@.tmp
 	echo '{'						>> $@.tmp
-	echo '  public static final Class[] classes'		>> $@.tmp
-	echo '    = new Class[] {'				>> $@.tmp
+	echo '  public static LinkedList get ()'		>> $@.tmp
+	echo '  {'						>> $@.tmp
+	echo '    LinkedList list = new LinkedList ();'		>> $@.tmp
 	( cd $(srcdir) ; \
 	  find ${GEN_DIRS} \
 	    -name 'TestLib.*' -prune -o \
@@ -223,12 +231,14 @@ $(GEN_SOURCENAME)/JUnitTests.java: Makefile
 		main=`$(JV_SCAN) --print-main $${test}` ; \
 		if test "$$main"x = x ; then \
 			echo $${test} | sed \
-				-e 's;/;.;g' \
-				-e 's;.java$$;.class,;' ; \
+				-e 's,/,.,g' \
+				-e 's,.java$$,.class,' \
+				-e 's,\(.*\),    list.add(\1);,' ; \
 		fi ; \
 	  done \
 	)							>> $@.tmp
-	echo '    };'						>> $@.tmp
+	echo '    return list;'					>> $@.tmp
+	echo '  }'						>> $@.tmp
 	echo '}'						>> $@.tmp
 	mv -f $@.tmp $@
 
