@@ -1,3 +1,7 @@
+2006-02-05  Andrew Cagney  <cagney@redhat.com>
+
+	* frysk.xml: Add funit(8) to new SEE ALSO section.
+
 2006-02-02  Andrew Cagney  <cagney@redhat.com>
 
 	* frysk.xml: new file.
